fixed bottom navbar (no longer covers content on scroll), contact form now validates email and resets after user input, added resume and skills section

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,7 @@
+html {
+    margin-bottom: 65px;
+}
+
 $blue:    #219EBC ;
 $indigo:  #023047 ;
 $orange:  #FB8500 ;
